tests/snapshots/snapshots__conflict_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  2                In Progress  3            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
   Backlog         2
 ▌ In Progress     3   ▎ Record a demo           ▎ Calmer card style       ▎ Set up CI
   Done            2   ▎ Commit the .tape fil…   ▎ Tiles with an accent…   ▎ fmt, clippy and test…
                       ▎ ◷ 3d ago                ▎ ◷ 12m ago               ▎ ◷ 5h ago

                       ▎ Package release         ▎ Command table           ▎ Snapshot tests
                       ▎ binaries                ▎ Every keybinding def…   ▎ ◷ 1d ago
                       ▎╭ Changed on disk ─────────────────────────────────╮
                        │                                                  │
                        │  Another program changed the board.              │
                        │  Load it (u undoes), or keep your version.       │
                        │                                                  │
                        │  r load it   o keep mine   Esc later             │
                        │                                                  │
                        ╰──────────────────────────────────────────────────╯










 CONFLICT   ✕ changed on disk   r load it   o keep mine   Esc later
