tests/snapshots/snapshots__delete_column_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                           In Progress  2/2                     2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔
   Backlog         3
 ▌ In Progress   2/2   ▎ Write the README                   ▎ Calmer card style                  D
   Done          2/1   ▎ Cover install, usage, keys and …   ▎ Tiles with an accent bar.          o
                       ▎ ◷ 1d ago                           ▎ ◷ 12m ago                          n
                                                                                                 e
                       ▎ Record a demo                      ▎ Command table
                       ▎ Commit the .tape file too.         ▎ Every keybinding defined once.
                       ▎╭ Delete column ───────────────────────────────────╮
                        │                                                  │
                       ▎│  Delete column "In Progress"?                    │
                       ▎│  Its 2 tasks move to ‹ Backlog ›                 │
                        │                                                  │
                        │  y delete   h/l tasks go to   n cancel           │
                        │                                                  │
                        ╰──────────────────────────────────────────────────╯










 DELETE   ● saved   y delete   h/l tasks go to   n cancel
