tests/snapshots/snapshots__detail_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 TUI KANBAN   Snapshot Board   [BOARD]                      ╭ Task details ────────────────────────╮
 COLUMNS           │╭───────────────────────────────────────│Write the README                      │
                    │ Backlog  3                            │                                      │
 ▌ Backlog 3        │╭──────────────────────────────────────│                                      │
   In Prog…2        ││Write the README                      │ Backlog  •  00000000                 │
   Done    2        ││                                      │                                      │
                    ││Cover install, usage, keys and the fil│Cover install, usage, keys and the    │
                    ││ Backlog  •  updated 1d               │file format.                          │
                    │╰──────────────────────────────────────│                                      │
                    │╭──────────────────────────────────────│                                      │
                    ││Record a demo                         │                                      │
                    ││                                      │                                      │
                    ││Commit the .tape file too.            │                                      │
                    ││ Backlog  •  updated 3d               │                                      │
                    │╰──────────────────────────────────────│                                      │
                    │╭──────────────────────────────────────│                                      │
                    ││Package release binaries              │                                      │
                    ││                                      │                                      │
                    ││No description                        │                                      │
                    ││ Backlog  •  updated 9d               │                                      │
                    │╰──────────────────────────────────────│                                      │
                    │                                       │                                      │
                    │                                       │                                      │
                    │                                       │                                      │
                    │                                       │                                      │
                    │                                       │created 2d                            │
                    │                                       │updated 1d  •  id 00000000            │
                    │                                       │e edit  •  H/L move  •  d delete  •   │
                    ╰───────────────────────────────────────│esc close                             │
 e edit  •  H/L move  •  PgUp/PgDn scroll  •  esc close     ╰──────────────────────────────────────╯
