tests/snapshots/snapshots__detail_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(60, 20)"
---
 TUI KANBAN   Snapshot Board╭ Task details ────────────────╮
╭───────────────────────────│Write the README              │
│ Backlog  3                │                              │
│╭──────────────────────────│                              │
││Write the README          │ Backlog  •  00000000         │
││                          │                              │
││Cover install, usage, keys│Cover install, usage, keys and│
││ Backlog  •  updated 1d   │the file format.              │
│╰──────────────────────────│                              │
│╭──────────────────────────│                              │
││Record a demo             │                              │
││                          │                              │
││Commit the .tape file too.│                              │
││ Backlog  •  updated 3d   │                              │
│╰──────────────────────────│                              │
│                           │created 2d                    │
│                           │updated 1d  •  id 00000000    │
│                           │e edit  •  H/L move  •  d     │
╰───────────────────────────│delete  •  esc close          │
 e edit  •  H/L move  •  PgU╰──────────────────────────────╯
