tests/snapshots/snapshots__editor_edit_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress╭ Edit task ───────────────────────────────────────────────────────────╮
   Done       │                                                                      │py and test…
              │  Title                                                               │
              │  ▎ Write the README                                                  │
              │                                                                      │tests
              │  Description                                                         │
              │    Cover install, usage, keys and the file format.                   │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │  Ctrl+S save   Tab switch field   Esc cancel                         │
              │                                                                      │
              ╰──────────────────────────────────────────────────────────────────────╯




 EDIT   ● saved   Ctrl+S save   Tab switch field   Esc cancel
