tests/snapshots/snapshots__editor_new_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 TUI KANBAN   Snapshot Board   [BOARD]                                                       saved
 COLUMNS           │╭──────────────────────────────────────────────────────────────────────────────╮
                    │ Backlog  3                                                                   │
 ▌ Backlog 3        │╭────────────────────────────────────────────────────────────────────────────╮│
   In Prog…2        ││Write the README                                                            ││
   Done    2        ││                                                                            ││
                    ││Cover install, usage, keys and the file format.                             ││
              ╭ New task ────────────────────────────────────────────────────────────╮            ││
              │ Title      ╭────────────────────────────────────────────────────────╮│────────────╯│
              │            │                                                        ││────────────╮│
              │            ╰────────────────────────────────────────────────────────╯│            ││
              │ Description╭────────────────────────────────────────────────────────╮│            ││
              │            │Add a short description                                 ││            ││
              │            │                                                        ││            ││
              │            │                                                        ││────────────╯│
              │            │                                                        ││────────────╮│
              │            │                                                        ││            ││
              │            │                                                        ││            ││
              │            ╰────────────────────────────────────────────────────────╯│            ││
              │Enter saves • Tab switches fields • Esc cancels                       │            ││
              │                                                                      │────────────╯│
              ╰──────────────────────────────────────────────────────────────────────╯             │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    ╰──────────────────────────────────────────────────────────────────────────────╯
 tab switch  •  enter save  •  esc cancel
